--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,17 @@
-
 services:
-
   authentication:
     image: authentication
     build: 
       context: ./authentication
       dockerfile: Dockerfile
     container_name: authentication
-
     ports:
      - "4007:80"
     environment:
       - PORT=80
-      - DBHOST=mongodb://db:27017
+      - DBHOST=mongodb+srv://user:123@mymongo.w2tkj.mongodb.net/?retryWrites=true&w=majority&appName=myMongo
       - DBNAME=video_service
       - JWT_SECRET=MALIK
-
     restart: "no"
 
   usage-monitoring:
@@ -31,7 +27,7 @@ services:
       - "4006:80"
     environment:
       - PORT=80
-      - DBHOST=mongodb://db:27017
+      - DBHOST=mongodb+srv://user:123@mymongo.w2tkj.mongodb.net/?retryWrites=true&w=majority&appName=myMongo
       - DBNAME=video_service
       - DAILY_BANDWIDTH_LIMIT=104857600 
     restart: "no"
@@ -49,7 +45,7 @@ services:
       - "4005:80"
     environment:
       - PORT=80
-      - DBHOST=mongodb://db:27017
+      - DBHOST=mongodb+srv://user:123@mymongo.w2tkj.mongodb.net/?retryWrites=true&w=majority&appName=myMongo
       - DBNAME=video_service
       - VIDEO_STORAGE_HOST=video-storage
       - VIDEO_STORAGE_PORT=80
@@ -68,7 +64,7 @@ services:
       - "4004:80"
     environment:
       - PORT=80
-      - DBHOST=mongodb://db:27017
+      - DBHOST=mongodb+srv://user:123@mymongo.w2tkj.mongodb.net/?retryWrites=true&w=majority&appName=myMongo
       - DBNAME=video_service
       - MAX_STORAGE=52428800 
       - ALERT_THRESHOLD=41943040 
@@ -104,20 +100,13 @@ services:
      - "4003:80"
     environment:
       - PORT=80
-      - DBHOST=mongodb://db:27017
+      - DBHOST=mongodb+srv://user:123@mymongo.w2tkj.mongodb.net/?retryWrites=true&w=majority&appName=myMongo
       - DBNAME=video_service
       - VIDEO_STORAGE_HOST=video-storage  
       - VIDEO_STORAGE_PORT=80 
       - STORAGE_MANAGEMENT_HOST=storage-management
       - STORAGE_MANAGEMENT_PORT=80
-
     restart: "no"
-  db:
-    image: mongo:7.0.0
-    container_name: db
-    ports:
-     - "4000:27017"
-    restart: always
 
   gcp-storage:
     image: gcp-storage
@@ -145,12 +134,9 @@ services:
      - "4002:80"
     environment:
       - PORT=80
-      - DBHOST=mongodb://db:27017
+      - DBHOST=mongodb+srv://user:123@mymongo.w2tkj.mongodb.net/?retryWrites=true&w=majority&appName=myMongo
       - DBNAME=video_service
       - VIDEO_STORAGE_HOST=video-storage  
       - VIDEO_STORAGE_PORT=80 
       - GOOGLE_APPLICATION_CREDENTIALS=cloud-project-444314-0852c8805c7b.json
-    depends_on:
-      - db
- 
     restart: "no"
